Added fanpage with updates

--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
     <section>
         <h3>My favourite Nicki Minaj songs </h3>
         <p>I am a <b>HUGE</b> Nicki Minaj fan so selecting my favourite Nicki Minaj songs is hard but here I will list my top 5 songs.
-        </p>
-        <br>
-        <p> 
             <ol>
                 <li>Moment 4 Life</li>
                 <li>Chiraq</li>
@@ -53,9 +50,9 @@
         </p>
     </section>
 </main>
-
+<br>
 <footer>
-    <p>@copyright desinged by Victoria Adeniran</p>
+    <p>@copyright designed by Victoria Adeniran</p>
 </footer>
 
 </body>
