Added Videos and Pics to my fanpage

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 </header>
 
 <main>
+    
      <h2>Who is Nicki Minaj?</h2>
     <section>
+        <img src= "FanPage---Nicki-Minaj/nicki pic 2" alt= "This is a picture of Nicki Minaj pouting" width= "750" height= "500">
         <h3>Information </h3>
         <p>Onika Tanya Maraj <i><q>Nicki Minaj</q></i> is a female rapper that debuted her firt album 
             <q>Pink Friday</q> in 2010. She is 40 now and is known for her extensive rap career, 
@@ -44,8 +46,19 @@
                 <li>Chiraq</li>
                 <li>Sir</li>
                 <li>High School</li>
-                <li>Romans Revenge</li>
+            
             </ol>
+
+        </p>
+    </section>
+
+    <section>
+        <p> Here is a video to Nicki Minaj's best moments.
+            <iframe width="1000" height="800" src="https://youtu.be/UkX_wf0BFg8" title="Nicki Minaj Best Momemnts"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;picture-in-picture"
+            allowfullscreen> 
+        </iframe>
+
 
         </p>
     </section>
