Added a line i forgot

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li>Chiraq</li>
                 <li>Sir</li>
                 <li>High School</li>
+                <li>Romans Revenge</li>
             
             </ol>
 
